--- a/LLM_Detect_AI_Generated_Text_.ipynb
+++ b/LLM_Detect_AI_Generated_Text_.ipynb
@@ -1677,7 +1677,7 @@
       "cell_type": "code",
       "source": [
         "#Configure API key\n",
-        "genai.configure(api_key=\"AIzaSyDPimtTVfT6FuTRtkqqb6HDb9Kf6ECeXs8\")"
+        "genai.configure(api_key=\"Use API key")"
       ],
       "metadata": {
         "id": "8oJk3spCb33I"
